<resources>
    <string name="app_name">Restaurante</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cadastro">Primeiro acesso? Cadastra-se</string>
    <string name="nomeUsuario">Nome</string>
    <string name="cadastrar_button">Cadastrar</string>
    <string name="button_voltar">Voltar</string>
</resources>